Fix issues with megamap scrollable search results in IE11. Bugs related to boxes with overflow scroll and max-height; settings a pixel value for max-height fixes it. Also, set -ms-overflow-style: -ms-autohiding-scrollbar for better scrollbar style. Now IE 11 looks a bit better than Firefox.

--- a/website/assets/sass/_searchview.scss
+++ b/website/assets/sass/_searchview.scss
@@ -2,6 +2,10 @@
 @import "../../../node_modules/react-select/dist/react-select.css";
 
 
+$search-inner-height: 550px;
+$results-view-max-height: 410px;
+$scroll-max-height: $results-view-max-height - 46;
+
 .searchView {
     width: 290px;
     max-height: 572px;
@@ -13,8 +17,7 @@
     right: 10px;
 
     @include media($megamap-break) {
-        @include display(flex);
-        @include flex-direction(column);
+        display: block;
     }
 
     h2 {
@@ -43,14 +46,10 @@
         width: 260px;
         background-color: $pale-green;
         padding: $tiny-spacing;
-        max-height: 550px;
+        max-height: $search-inner-height;
         @include display(flex);
         @include flex-direction(column);
         @include justify-content(space-between);
-
-        .resultsView {
-            @include flex(1 1 auto);
-        }
     }
     section {
         margin-top: $tiny-spacing;
@@ -225,6 +224,7 @@
 .buttonBar > button {
     font-size: $compact-text-size;
     padding: 6px 3px;
+    max-width: 49%;
     @include flex(0 1 49%);
     @include order(0);
 }
@@ -239,18 +239,31 @@
 }
 
 
+.resultsViewWrapper {
+    display: block;
+}
+
 .resultsView {
     padding-top: 0;
+    max-height: $results-view-max-height;
     @include display(flex);
     @include flex-direction(column);
     @include justify-content(space-between);
 
+    .scrollWrap {
+        max-height: $scroll-max-height;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+
     section {
         border: none;
     }
-    .resultsNav, .scrollWrap {
-        @include flex(1 1 auto);
+
+    > div {
+        display: block;
+        position: relative;
     }
+
     .resultsNav {
         margin: $tiny-spacing 0;
         min-height: 30px;
@@ -260,10 +273,20 @@
         @include justify-content(space-between);
         @include align-content(stretch);
 
+        > *, > .button-wrap {
+            @include flex(0 1 40%);
+            min-width: 80px;
+            max-height: 36px;
+            display: block;
+
+            button {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
         button {
             display: block;
-            min-width: 80px;
-            @include flex(0 1 40%);
         }
     }
     ul.searchResults {
